--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -58,6 +58,8 @@ mat-toolbar {
     max-width: 20rem;
     text-align: center;
     margin: 0 auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .normal-card-combat {
@@ -66,6 +68,8 @@ mat-toolbar {
     max-width: 20rem;
     text-align: center;
     margin: 0 auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 mat-card-title {
@@ -78,6 +82,8 @@ mat-card-title {
     max-width: 20rem;
     text-align: center;
     margin: 0 auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .edit-buff-button {
