--- a/src/app/edit-buff/edit-buff.page.scss
+++ b/src/app/edit-buff/edit-buff.page.scss
@@ -41,6 +41,12 @@ mat-toolbar {
   width: 90%;
 }
 
+.extra-buff {
+  width: 90%;
+  max-width: 8rem;
+  margin: 0 auto;
+}
+
 .save-button {
   position: relative;
   text-align: center;
