Modifiche grafiche all buff page

--- a/src/app/add-character/add-character.page.scss
+++ b/src/app/add-character/add-character.page.scss
@@ -62,7 +62,7 @@ mat-horizontal-stepper {
   width: 95%;
   align-items: center;
   justify-content: center;
-  margin: 0 auto 4rem;
+  margin: 0 auto;
 }
 
 .characteristics-table {
