--- a/src/app/character-stats/character-stats.page.scss
+++ b/src/app/character-stats/character-stats.page.scss
@@ -42,7 +42,7 @@ mat-drawer-container {
 }
 
 .description-div {
-  position: fixed;
+  position: absolute;
   right: 3rem;
   overflow: hidden;
   text-overflow: fade;
