--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -32,7 +32,8 @@
         </button>
     </mat-toolbar>
 
-    <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4" [selectedIndex]="selectedTab" swipeleft="swipe($event.type)" swiperight="swipe($event.type)">
+    <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4" [selectedIndex]="selectedTab"
+                   (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)">
 
         <mat-tab label="COMBAT">
 
