--- a/src/app/double-check-buff-dialog/double-check-buff-dialog.component.html
+++ b/src/app/double-check-buff-dialog/double-check-buff-dialog.component.html
@@ -1,7 +1,7 @@
 <mat-label mat-dialog-title>Sei sicuro?</mat-label>
 <mat-dialog-content>
-  <div style="align-content: center; padding-bottom: 4%">
-    <mat-label>Una volta eliminato, il buff non può essere recuperato.</mat-label>
+  <div style="align-content: center; margin-bottom: 2rem">
+    <mat-label>Una volta eliminato, il buff non potrà essere recuperato.</mat-label>
   </div>
   <table class="button-table">
     <tr style="text-align: center">
